k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-grpc
  namespace: go-grpc
  labels:
    app: go-grpc
spec:
  type: ClusterIP
  selector:
    app: go-grpc
  ports:
  - port: 50051
    targetPort: 50051
    protocol: TCP
    name: grpc
    appProtocol: kubernetes.io/h2c
