k8s/grpcroute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: go-grpc
  namespace: go-grpc
spec:
  parentRefs:
  - name: gws-gateway
    namespace: gws-system
  hostnames:
  - go-grpc.go-grpc.local.getwebstack.dev
  rules:
  - matches:
    - method:
        service: api.Greeter
    backendRefs:
    - name: go-grpc
      port: 50051
